<?xml version="1.0" encoding="utf-8" ?><!DOCTYPE resources[<!ENTITY appname "PhoShare">]>

<resources>
    <!-- Global -->
    <string name="app_name">&appname;</string>
    <string name="app_slogan">Friendly photo sharing platform</string>
    <string name="logo_desc">&appname;\'s logo</string>

    <!-- Login -->
    <string name="login_username_input_hint">Username</string>
    <string name="login_password_input_hint">Password</string>
    <string name="login_login_button_text">Login</string>
    <string name="login_signup_button_text">Sign up</string>
    <string name="login_forgot_my_password">I forgot my password</string>
    <string name="login_username_empty_error">Input a username first</string>
    <string name="login_password_empty_error">Input a password first</string>
    <string name="login_password_short_error">Passwords cannot has less than 5 characters</string>
    <string name="login_invalid_username_error">Invalid username</string>
    <string name="login_invalid_password_error">Password incorrect</string>
    <string name="login_login_success_message">You\'ve successfully logged in</string>

    <!-- Sign up -->
    <string name="signup_password_confirmation_input_hint">Repeat your password</string>
    <string name="signup_security_answer_input_hint">Provide an answer</string>
    <string name="signup_terms_agreement">I agree with the terms of use</string>
    <string name="signup_signup_button_text">Sign up</string>
    <string name="signup_clear_button_text">Clear</string>
    <string-array name="signup_security_questions">
        <item>What\'s your favorite color?</item>
        <item>What was your first pet\'s name?</item>
        <item>Where is your father from?</item>
        <item>What\'s your favorite sport?</item>
        <item>What\'s your favorite video-game character?</item>
        <item>What\'s your best friend\'s name?</item>
        <item>What\'s your catch-phrase?</item>
        <item>What\'s your favorite anime?</item>
        <item>What do you despise the most?</item>
    </string-array>
    <string name="signup_wrong_passwords_error">Passwords don\'t match</string>
    <string name="signup_security_answer_empty_error">Provide an answer for the security question first</string>
    <string name="signup_terms_agreement_error">You have to agree with the terms of use</string>
    <string name="signup_password_confirmation_empty_error">Confirm your password first</string>
    <string name="signup_registeration_success_message">You\'ve successfully signed up</string>
    <string name="signup_valid_user_error">This username already exists</string>

    <!-- Main -->
    <string name="main_logout">Log-out</string>
    <string name="main_logout_confirmation_message">Do you want to log-out from your account?</string>
    <string name="main_logout_dialog_positive_button">Yes</string>
    <string name="main_logout_dialog_negative_button">No</string>

    <!-- Forgot my Password -->
    <string name="forgot_password_next_button_next_text">Next</string>
    <string name="forgot_password_restore_button_next_text">Restore my password</string>
    <string name="forgot_password_security_question_error">Invalid answer</string>
</resources>
