<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_slogan"
                android:src="@drawable/icon"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textSize="16sp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/login_username_input_hint"
                android:maxLength="20"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password_input_hint"
                android:maxLength="15"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etPasswordConfirmation"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/signup_password_confirmation_input_hint"
                android:maxLength="15"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/sSecurityQuestions"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:entries="@array/signup_security_questions"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etSecurityAnswer"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/signup_security_answer_input_hint"
                android:maxLength="30"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/cbTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/signup_terms_agreement"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_signup_button_text"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/signup_clear_button_text"
                    android:layout_weight="1"/>
            </LinearLayout>
        </TableRow>

    </TableLayout>

</RelativeLayout>