<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordNextActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_slogan"
                android:src="@drawable/icon"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textSize="16sp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp">

            <TextView
                android:id="@+id/tvSecurityQuestion"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/etSecurityAnswer"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/signup_security_answer_input_hint"
                android:maxLength="30" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnRestore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/forgot_password_restore_button_next_text"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>